--- a/_posts/2025-06-01-example.md
+++ b/_posts/2025-06-01-example.md
@@ -20,17 +20,6 @@ typograms: true
 
 authors:
   - name: Albert Einstein
-    url: "https://en.wikipedia.org/wiki/Albert_Einstein"
-    affiliations:
-      name: IAS, Princeton
-  - name: Boris Podolsky
-    url: "https://en.wikipedia.org/wiki/Boris_Podolsky"
-    affiliations:
-      name: IAS, Princeton
-  - name: Nathan Rosen
-    url: "https://en.wikipedia.org/wiki/Nathan_Rosen"
-    affiliations:
-      name: IAS, Princeton
 
 bibliography: 2025-06-01-bg.bib
 
@@ -40,12 +29,13 @@ bibliography: 2025-06-01-bg.bib
 #     for hyperlinks within the post to work correctly.
 #   - we may want to automate TOC generation in the future using
 #     jekyll-toc plugin (https://github.com/toshimaru/jekyll-toc).
+  
+# if a section has subsections, you can add them as follows:
 toc:
   - name: Equations
-    # if a section has subsections, you can add them as follows:
-    # subsections:
-    #   - name: Example Child Subsection 1
-    #   - name: Example Child Subsection 2
+    subsections:
+      - name: Example Child Subsection 1
+      - name: Example Child Subsection 2
   - name: Citations
   - name: Footnotes
   - name: Code Blocks
