--- a/_posts/2025-06-01-example.md
+++ b/_posts/2025-06-01-example.md
@@ -33,7 +33,7 @@ bibliography: 2025-06-01-bg.bib
 # if a section has subsections, you can add them as follows:
 toc:
   - name: Equations
-    subsections:
+    - subsections:
       - name: Example Child Subsection 1
       - name: Example Child Subsection 2
   - name: Citations
