debug - subsection link test

--- a/_posts/2025-06-01-example.md
+++ b/_posts/2025-06-01-example.md
@@ -1,7 +1,7 @@
 ---
 layout: distill
-title: example post
-description: an example of a distill-style blog post and main elements
+title: Boltzmann distributions and generative models
+description: generative models for learning the boltzmann distribution
 tags: distill formatting
 giscus_comments: true
 date: 2021-05-22
@@ -19,7 +19,7 @@ tikzjax: true
 typograms: true
 
 authors:
-  - name: Albert Einstein
+  - name: Seonghyun Park
 
 bibliography: 2025-06-01-bg.bib
 
@@ -84,6 +84,10 @@ $$
 $$
 
 Note that MathJax 3 is [a major re-write of MathJax](https://docs.mathjax.org/en/latest/upgrading/whats-new-3.0.html) that brought a significant improvement to the loading and rendering speed, which is now [on par with KaTeX](http://www.intmath.com/cg5/katex-mathjax-comparison.php).
+
+### Example Child Subsection 1
+
+Checking subsection
 
 ---
 
