--- a/_posts/2025-06-01-example.md
+++ b/_posts/2025-06-01-example.md
@@ -2,9 +2,9 @@
 layout: distill
 title: Boltzmann distributions and generative models
 description: generative models for learning the boltzmann distribution
-tags: distill formatting
+tags: geometric_deep_learning
 giscus_comments: true
-date: 2021-05-22
+date: 2025-06-01
 featured: true
 mermaid:
   enabled: true
