debug - new post

--- a/_posts/2025-05-28-example.md
+++ b/_posts/2025-05-28-example.md
@@ -1,10 +1,10 @@
 ---
 layout: distill
-title: Boltzmann distributions and generative models
-description: generative models for learning the boltzmann distribution
-tags: geometric_deep_learning
+title: a distill-style blog post
+description: an example of a distill-style blog post and main elements
+tags: distill formatting
 giscus_comments: true
-date: 2025-05-29
+date: 2025-05-28
 featured: true
 mermaid:
   enabled: true
@@ -19,9 +19,20 @@ tikzjax: true
 typograms: true
 
 authors:
-  - name: Seonghyun Park
+  - name: Albert Einstein
+    url: "https://en.wikipedia.org/wiki/Albert_Einstein"
+    affiliations:
+      name: IAS, Princeton
+  - name: Boris Podolsky
+    url: "https://en.wikipedia.org/wiki/Boris_Podolsky"
+    affiliations:
+      name: IAS, Princeton
+  - name: Nathan Rosen
+    url: "https://en.wikipedia.org/wiki/Nathan_Rosen"
+    affiliations:
+      name: IAS, Princeton
 
-bibliography: 2025-06-01-bg.bib
+bibliography: 2018-12-22-distill.bib
 
 # Optionally, you can add a table of contents to your post.
 # NOTES:
@@ -29,13 +40,12 @@ bibliography: 2025-06-01-bg.bib
 #     for hyperlinks within the post to work correctly.
 #   - we may want to automate TOC generation in the future using
 #     jekyll-toc plugin (https://github.com/toshimaru/jekyll-toc).
-  
-# if a section has subsections, you can add them as follows:
 toc:
   - name: Equations
-    - subsections:
-      - name: Example Child Subsection 1
-      - name: Example Child Subsection 2
+    # if a section has subsections, you can add them as follows:
+    # subsections:
+    #   - name: Example Child Subsection 1
+    #   - name: Example Child Subsection 2
   - name: Citations
   - name: Footnotes
   - name: Code Blocks
@@ -84,14 +94,6 @@ $$
 $$
 
 Note that MathJax 3 is [a major re-write of MathJax](https://docs.mathjax.org/en/latest/upgrading/whats-new-3.0.html) that brought a significant improvement to the loading and rendering speed, which is now [on par with KaTeX](http://www.intmath.com/cg5/katex-mathjax-comparison.php).
-
-### Example Child Subsection 1
-
-Checking subsection
-
-### Example Child Subsection 2
-
-Checking subsection
 
 ---
 
